Change Log:

**8/27/15**

- Fixed main hand RCR max limit to allow for Yang's Recurve 
- Added Cubed legendary powers to "paperdoll" view
- Removed cube items from profile "Items..." popup window

**8/26/15**

- Added Yang's Recurve
- Added Hunter's Wrath (with import of legendary power)
- Fixed BreakPoint calculations for skills that depend on weapon type (e.g. EvasiveFire). This was shown correctly in break point table, but was not being calculated properly in the simulation, resulting in 1.02 APS for those skills.
- Added import of legendary powers from cube
- Removed Dead Man's Legacy bonus for MS fired by M4 Sentries
- Removed "freeze" from Cull the Weak legend description
- Sentry skill damage is now multiplicative for M4 skills, additive for sentry bolts and rockets

**7/2/15**
- Added Cube item effects (preparation for 2.3). Still need to add more legendary item types.

**6/29/15**
- Fixed Bombadier's Rucksack not adding +2 Sentries

**6/8/15**
- Fixed hatred cost of Multishot/Fire at Will (18 vs 25)

**5/27/15**
- Added Breakpoints for skills. (thanks to Riv and Junger for explaining the formulas and providing data)
-- Breakpoints are caluclated from animation frames (click "skills..." button to see the frame values for each skill). 
-- Note that some skills (ES, EF, HA) use the weapon type to calculate animation frames. 
-- Animation Frames for each skill/weapon were retrieved from the animations .zip file at http://us.battle.net/d3/en/forum/topic/17070616926#8
-- Base Frames per Attack (FPA) is calculated as 60 * (frames - 1) / frames 
-- Minimum APS for a BP is calculated as Base_FPA / FPA (for that Break Point)
-- Break Point Actual APS is calculated as 60 / FPA (for that Break Point)
-- The "Break Points..." button will allow you to view all calculated breakpoints for any skill. 
-- The "DPS/Break Point Calculator..." button will show you your current BP for a skill, and what is needed for next BP